# CADEX-Assignment

./: CMakeLists.txt  README.md
CADEX Assignment v4/: CMakeLists.txt  Curves.cpp  Curves.h  Main.cpp  Main.h
CADEX Assignment v4/Lib/: CMakeLists.txt  Curves.cpp  Curves.h
